# Toxitty

./: .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindJsonCpp.cmake
doc/: LICENSE
src/: buffers.cpp  buffers.hpp  callbacks.cpp  callbacks.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  core.cpp  core.hpp  input.cpp  input.hpp  interface.cpp  interface.hpp  keyhandler.cpp  keyhandler.hpp  main.cpp  misc.cpp  misc.hpp
